<resources>
    <string name="app_name">TabletKat</string>
    <string name="app_version">1.2test14</string>

    <!--Strings from settings activity-->

    <!-- Headers -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_recents">Recents</string>
    <string name="pref_header_launcher">Launcher</string>
    <string name="pref_header_settings">Settings</string>
    <string name="pref_header_about">About</string>

    <!-- General -->
    <string name="pref_title_enable_tablet_ui">Enable tablet UI</string>
    <string name="pref_summary_enable_tablet_ui">Use older tablet mode</string>

    <string name="pref_title_extended_settings">Extended quick settings</string>
    <string name="pref_summary_extended_settings">Allow additional features in the settings pane</string>

    <string name="pref_title_ics_clock_font">ICS clock font</string>
    <string name="pref_summary_ics_clock_font">Use a special font for clock</string>

    <string name="pref_title_battery_percents">Show battery percents</string>

    <!-- Recents -->
    <string name="pref_title_enable_mod_recents">Enable tablet recents</string>
    <string name="pref_summary_enable_mod_recents">Pin recents to the left</string>

    <string name="pref_title_overlay_recents">Enable overlay recents</string>
    <string name="pref_summary_overlay_recents">Open recents above the current app</string>

    <!-- Launcher -->
    <string name="pref_title_enable_mod_launcher">Enable tablet launcher layout</string>
    <string name="pref_summary_enable_mod_launcher">Launcher2 (Nexus 10 default) only</string>

    <!-- Settings -->
    <string name="pref_title_enable_mod_settings">Enable multi-pane settings</string>
    <string name="pref_summary_enable_mod_settings">Enable multi-pane mode in the Settings app</string>

    <string name="pref_title_force_breadcrumbs">Force breadcrumbs</string>

    <string name="pref_title_settings_light_theme">Light theme</string>
    <string name="pref_summary_settings_light_theme">Use this if you experience glitches</string>

    <!-- About -->
    <string name="pref_title_version">TabletKat version</string>
    <string name="pref_summary_version">@string/app_version</string>

    <string name="pref_title_support">Discussion</string>
    <string name="pref_summary_support">Tap to open XDA forum thread</string>

    <string name="pref_title_source">Source code</string>
    <string name="pref_summary_source">Tap to see the source code on Github</string>

    <string name="pref_title_donate">Donate</string>
    <string name="pref_summary_donate">Tap to donate via PayPal</string>

    <!--Translators should override this in the following manner:

    <string name="pref_title_translation">%language% translation by</string>
    <string name="pref_summary_translation">%your name%</string>
    <string name="pref_translation_email">mailto:%your email%</string>
    -->

    <string name="pref_title_translation"/>
    <string name="pref_summary_translation"/>
    <string name="pref_translation_email"/>
</resources>
