<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="enable_tablet_ui"
        android:title="@string/pref_title_enable_tablet_ui"
        android:summary="@string/pref_summary_enable_tablet_ui"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="ics_clock_font"
        android:title="@string/pref_title_ics_clock_font"
        android:summary="@string/pref_summary_ics_clock_font"
        android:dependency="enable_tablet_ui"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="battery_percents"
        android:title="@string/pref_title_battery_percents"
        android:dependency="enable_tablet_ui"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="extended_settings"
        android:title="@string/pref_title_extended_settings"
        android:summary="@string/pref_summary_extended_settings"
        android:dependency="enable_tablet_ui"
        android:defaultValue="false" />

</PreferenceScreen>
